Revert "Made each row scroll separately, fixed scrolling issue on mobile due to incorrect media queries"
This reverts commit d0f74fd0ed46b3d608902337619f2019541bcc15.

--- a/css/5212.css
+++ b/css/5212.css
@@ -1,5 +1,4 @@
-
-.members-row>div {
+.members-container>div {
    display:inline-block;
    vertical-align:top;
    padding: 5px;
@@ -110,10 +109,8 @@
    .members-container>br{
       display: none !important;
    }
-}
-@media (max-width:599px){
-   .members-row{
-      overflow-x:scroll;
-      white-space:nowrap;
+   .members-container{
+      overflow-x: scroll;
+      white-space: nowrap;
    }
 }
